<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imgMike"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginStart="100dp"
        android:layout_marginTop="180dp"
        app:layout_constraintEnd_toStartOf="@+id/imgSiro"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mike0" />

    <ImageView
        android:id="@+id/imgSiro"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:layout_marginTop="180dp"
        android:layout_marginEnd="100dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/imgMike"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/siro0" />

    <TextView
        android:id="@+id/txtTsukkomi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/title"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnStart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        android:text="@string/start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtChoose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTsukkomi" />

    <TextView
        android:id="@+id/txtLeft"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/mike"
        app:layout_constraintBottom_toTopOf="@+id/imgMike"
        app:layout_constraintStart_toStartOf="@+id/imgMike" />

    <TextView
        android:id="@+id/txtRight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="28dp"
        android:text="@string/siro"
        app:layout_constraintBottom_toTopOf="@+id/imgSiro"
        app:layout_constraintEnd_toEndOf="@+id/imgSiro" />

</androidx.constraintlayout.widget.ConstraintLayout>